--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -366,8 +366,8 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" style="font-size:8px;">
-            11) <span style="color:red;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No. 8 above is below Rs. 12 lakhs:</span><br>
+          <td style="text-align: left;" class="right-border" style="font-size:7px;">
+            11) <span style="color:red;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
             14) <span style="color:purple;">L.T. Capital Gain (12.5% >1.25L):</span> &ensp;<input type="number" id="lt_cg1" value="0" oninput="calculateAll()"><br>
@@ -376,7 +376,7 @@ th{
             17) Total Tax Payable (15+16):<br>
             18) Less: relief u/s 89 if any:<br>
             19) Net Tax Payable (17-18):<br>
-            20) Less Tax deducted at source u/s 192(1) upto January,2026 (TDS):<br>
+            20) Less Tax deducted at source u/s 192(1) upto January, ${year} (TDS):<br>
 
             <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:15px; position: relative; left: -10px;" disabled> 
           </td>
