--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -29,9 +29,6 @@
 	.sign {
       font-family: 'Bookman Old Style', serif;
       background-color: rgb(241, 252, 251);
-      
-      display: flex;
-      flex-direction: column;
       align-items: center;
 	}
 	
@@ -52,7 +49,7 @@ th.no-bottom-border {
 #search_section{
     display:none;
     margin-top:20px;
-    padding:20px;
+    padding:5px;
     background:white;
     border-radius:20px;
     box-shadow:0 2px 8px rgba(0,0,0,0.1);
@@ -61,13 +58,13 @@ th.no-bottom-border {
 
 input[type=text]{
     width:100%;
-    padding:10px;
+    padding:5px;
     border-radius:7px;
     border:1px solid #ccc;
 }
 
 button{
-    padding:8px 15px;
+    padding:8px 10px;
     margin-top:8px;
     border:none;
     border-radius:5px;
@@ -87,7 +84,7 @@ table{
     margin-top:3px;
     background:white;
     padding:3px;
-   
+   font-size:8px;
 }
 th,td{
     border:1px solid #ccc;
@@ -294,7 +291,7 @@ th{
       </thead>
       <tbody>
         <tr>
-          <td style="text-align: left;" class="right-border" style="font-size:8px;">
+          <td style="text-align: left;" class="right-border" >
             1) Gross Salary Income (March,2025 to February 2026):<br>
             2) Less: Standard Deduction U/S 16(Ia):<br>
             3) Income chargeable under the head salaries (1-2):
@@ -307,7 +304,7 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" style="font-size:8px;">
+          <td style="text-align: left;" class="right-border" >
             4) Add.: Any other Income reported by the employee:<br>
             <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &ensp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             <input type="number" id="oia" value="0" oninput="calculateAll()" style="width: 70px;"><br>
@@ -326,7 +323,7 @@ th{
             <input type="number" id="oi4e" disabled value="0"><br>
             <span class="sub-label">&emsp;Family Pension after deduction:</span> 
             <input type="number" id="oi4f" disabled value="0"><br>
-            <div style="text-align: right; padding-right: 9px;">Total Other Income (a to f):</div>
+            <div style="text-align: right; padding-right: 3px;">Total Other Income (a to f):</div>
           </td>
           <td style="vertical-align: bottom; text-align: center;">
             <input type="number" id="tot4" disabled value="0">
@@ -334,7 +331,7 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" style="font-size:8px;">
+          <td style="text-align: left;" class="right-border" >
             5) Gross Total Income (3+4):<br>
             <span style="color:red;">6) Less: Deduction U/S. 80CCD(2) NPS (Employer):</span><br>
             7) Taxable Income (5 - 6):<br>
@@ -358,7 +355,7 @@ th{
             <small>16,00,001 - 20,00,000 (20%):</small> &emsp;<input type="number" id="sal5" disabled> &emsp;&emsp; <input type="number" id="Tax_slab5" disabled value="0"><br>
             <small>20,00,001 - 24,00,000 (25%):</small> &emsp;<input type="number" id="sal6" disabled> &emsp;&emsp; <input type="number" id="Tax_slab6" disabled value="0"><br>
             <small>Above 24,00,000 (30%):</small> &ensp;&emsp;&emsp;<input type="number" id="sal7" disabled> &emsp;&emsp; <input type="number" id="Tax_slab7" disabled value="0"><br>
-            <div style="text-align: Left; font-weight: bold; padding-right: 9px;">10) TOTAL TAX PAYABLE:</div>
+            <div style="text-align: Left; font-weight: bold; padding-right: 3px;">10) Total Tax Payable:</div>
           </td>
           <td style="vertical-align: bottom; text-align: center;">
             <input type="number" id="TOTAL_Tax" disabled value="0">
@@ -367,7 +364,7 @@ th{
 
         <tr>
           <td style="text-align: left;" class="right-border" >
-            11) <span style="color:red;" style="font-size:7px;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
+            11) <span style="color:red;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
             14) <span style="color:purple;">L.T. Capital Gain (12.5% >1.25L):</span> &ensp;<input type="number" id="lt_cg1" value="0" oninput="calculateAll()"><br>
@@ -378,7 +375,7 @@ th{
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January, ${year} (TDS):<br>
 
-            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:15px; position: relative; left: -10px;" disabled> 
+            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:10px; position: relative; left: -10px;" disabled> 
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
