--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -84,7 +84,7 @@ table{
     margin-top:3px;
     background:white;
     padding:3px;
-   font-size:8px;
+   font-size:10px;
 }
 th,td{
     border:1px solid #ccc;
@@ -323,7 +323,7 @@ th{
             <input type="number" id="oi4e" disabled value="0"><br>
             <span class="sub-label">&emsp;Family Pension after deduction:</span> 
             <input type="number" id="oi4f" disabled value="0"><br>
-            <div style="text-align: right; padding-right: 3px;">Total Other Income (a to f):</div>
+            <div style="text-align: right; ">Total Other Income (a to f):</div>
           </td>
           <td style="vertical-align: bottom; text-align: center;">
             <input type="number" id="tot4" disabled value="0">
