--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -364,7 +364,7 @@ th{
 
         <tr>
           <td style="text-align: left;" class="right-border" >
-            11) <span style="color:red;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
+            11) <span style="color:red; font-size:8px;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
             14) <span style="color:purple;">L.T. Capital Gain (12.5% >1.25L):</span> &ensp;<input type="number" id="lt_cg1" value="0" oninput="calculateAll()"><br>
@@ -592,7 +592,7 @@ const otherRecord = otherSheetData.find(item =>
         GPF: 0, GSLI: 0, PTAX: 0, ITAX: 0
     };
 
-    let html = `<table style="font-size:10px;">
+    let html = `<table style="font-size:12px;">
     <thead>
     <h3 style="color: #8e14e0; position: relative; left: 17px; margin-bottom: 0;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h3>
        
