--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -84,7 +84,7 @@ table{
     margin-top:3px;
     background:white;
     padding:3px;
-   font-size:14px;
+   font-size:16px;
 }
 th,td{
     border:1px solid #ccc;
@@ -347,7 +347,7 @@ th{
 
         <tr>
           <td style="text-align: left;" class="right-border" >
-            9) Tax on Total Income &emsp;(Salary Slab) &emsp;&emsp;&emsp;&emsp;&emsp; (Tax):<br>
+            9) Tax on Total Income &emsp;(Salary Slab) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; (Tax):<br>
             <small>Upto 4,00,000 (Nil):</small> &emsp;&emsp;&emsp;&emsp; <input type="number" id="sal1" disabled> &emsp;&emsp; <input type="number" id="Tax_slab1" disabled value="0" ><br>
             <small>4,00,001 - 8,00,000 (5%):</small> &ensp;&emsp;&emsp;<input type="number" id="sal2" disabled> &emsp;&emsp; <input type="number" id="Tax_slab2" disabled value="0" ><br>
             <small>8,00,001 - 12,00,000 (10%):</small> &ensp;&emsp;<input type="number" id="sal3" disabled> &emsp;&emsp; <input type="number" id="Tax_slab3" disabled value="0" ><br>
@@ -364,7 +364,7 @@ th{
 
         <tr>
           <td style="text-align: left;" class="right-border" >
-            11) <span style="color:red; font-size:10px;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
+            11) <span style="color:red; font-size:14px;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
             14) <span style="color:purple;">L.T. Capital Gain (12.5% >1.25L):</span> &ensp;<input type="number" id="lt_cg1" value="0" oninput="calculateAll()"><br>
@@ -375,7 +375,7 @@ th{
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January, 2026 (TDS):<br>
 
-            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:20px; position: relative; left: -10px;" disabled> 
+            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:16px; position: relative; left: -10px;" disabled> 
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
