--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -364,7 +364,7 @@ th{
 
         <tr>
           <td style="text-align: left;" class="right-border" >
-            11) <span style="color:red; font-size:14px;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
+            11) <span style="color:red; ">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No.8 above is below Rs.12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
             14) <span style="color:purple;">L.T. Capital Gain (12.5% >1.25L):</span> &ensp;<input type="number" id="lt_cg1" value="0" oninput="calculateAll()"><br>
@@ -375,7 +375,7 @@ th{
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January, 2026 (TDS):<br>
 
-            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:16px; position: relative; left: -10px;" disabled> 
+            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:16px; position: relative; left: -5px;" disabled> 
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
