--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -84,7 +84,7 @@ table{
     margin-top:3px;
     background:white;
     padding:3px;
-   font-size:16px;
+ /*  font-size:16px;*/
 }
 th,td{
     border:1px solid #ccc;
