--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -244,7 +244,7 @@ th{
 
 <body>
 <div id="loginBox" style="text-align:center;margin-top:100px;">
-  <h2>Login with your e-mail</h2>
+  <h3>Login required</h3>
   <div id="g_id_onload"
        data-client_id="153331935742-fjjo78i8lp28pj22f95a7bhep6qmmae7.apps.googleusercontent.com"
        data-callback="handleCredentialResponse">
