--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -16,7 +16,7 @@
     font-style: italic;
     position: fixed;
     top: 98%;
-    left: 37%;
+    right: 17%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 17px;
     color: #fad457; 
@@ -244,7 +244,7 @@ th{
 
 <body>
 <div id="loginBox" style="text-align:center;margin-top:100px;">
-  <h3>Login required</h3>
+  <h3>Click here to Login with your e-mail</h3>
   <div id="g_id_onload"
        data-client_id="153331935742-fjjo78i8lp28pj22f95a7bhep6qmmae7.apps.googleusercontent.com"
        data-callback="handleCredentialResponse">
