--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -16,8 +16,8 @@
     font-style: italic;
     position: fixed;
     top: 98%;
-    right: 0%;
-    transform: translate(-50%, -50%) rotate(0deg);
+    left: 7%;
+    transform: translate(-50%, -50%) rotate(90deg);
     font-size: 17px;
     color: #fad457; 
     z-index: 0;
