--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -418,7 +418,7 @@ function handleCredentialResponse(response) {
     document.getElementById("loginBox").style.display = "none";
     document.getElementById("salaryContent").style.display = "block";
   } else {
-    alert("Access Denied ❌\nUnauthorized Email");
+    alert("Access Denied ❌\nUnauthorized Email. Contact WhatsApp 9800074626.");
   }
 }
     /*email id checking complete */
