--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -227,7 +227,7 @@ th{
 
 <body>
 <div id="loginBox" style="text-align:center;margin-top:100px;">
-  <h3>Login required</h3>
+  <h2>Click here to Login with your e-mail</h2>
   <div id="g_id_onload"
        data-client_id="153331935742-fjjo78i8lp28pj22f95a7bhep6qmmae7.apps.googleusercontent.com"
        data-callback="handleCredentialResponse">
@@ -240,7 +240,7 @@ th{
 
     <div id="salaryContent" style="display:none;">
 
-        <h1>Upload Excel file</h1>
+        <h1>Upload Excel Software with employee data</h1>
        <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
        <!-- 🔍 SEARCH SECTION -->
@@ -386,7 +386,7 @@ th{
         "evbasoftware@gmail.com",
         "d.p.denayek@gmail.com",
         "blarakesh@gmail.com", 
-     /*   "swapan.bera98@gmail.com"*/
+        "dulalchandraroy1970@gmail.com"
 ];
 
 function handleCredentialResponse(response) {
