--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -71,7 +71,9 @@ button{
 <div class="payslip">
 
 <h2>GOVT. OF WEST BENGAL</h2>
-<h3>PAY SLIP</h3>
+<h2>  OFFICE OF THE SUB INSPECTOR OF SCHOOLS</h2>
+<h2>  LABPUR CIRCLE, BIRBHUM</h2>
+<h3>PAY SLIP FOR THE MONTH OF AUGUST,2025</h3>
 
 <table class="no-border">
 <tr>
