--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -78,19 +78,19 @@ button{
 <table class="no-border">
 <tr>
 <td>EMPLOYEE NAME:</td>
-<td><input value="ANOAR ALI"></td>
+<td><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID:</td>
-<td><input value="VTME3361"></td>
+<td><input value="AAAA1111"></td>
 </tr>
 <tr>
 <td>SCHOOL NAME:</td>
-<td colspan="3"><input value="DARBARPUR PRIMARY SCHOOL (UDISE: 19080410101)"></td>
+<td colspan="3"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
 </tr>
 <tr>
 <td>DESIGNATION:</td>
 <td><input value="HT"></td>
 <td>PAN:</td>
-<td><input value="AFCPA3135R"></td>
+<td><input value="ABCDE1234F"></td>
 </tr>
 <tr>
 <td>LEVEL:</td>
