--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -102,42 +102,42 @@ button{
 
 <table>
 <tr>
-<th class="section-title">EARNINGS</th>
-<th class="section-title">AMOUNT</th>
-<th class="section-title">DEDUCTIONS</th>
-<th class="section-title">AMOUNT</th>
+<th class="section-title">EARNINGS(Rs)</th>
+<th class="section-title">DEDUCTIONS(Rs)</th>
+<th class="section-title">RECOVERIES OF LOAN(Rs)</th>
+<th class="section-title">OUT/ACCT.DED (Rs)</th>
 </tr>
 
 <tr>
-<td>BASIC</td><td><input value="55400"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>BASIC 55400</td><td><input value="55400"></td>
+<td>GPF 5500</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>ADDL. REMUN.</td><td><input value="400"></td>
-<td>PF LOAN</td><td><input value="0"></td>
+<td>ADDL. REMUN. 400</td><td><input value="400"></td>
+<td>PF LOAN 0</td><td><input value="0"></td>
 </tr>
 <tr>
-<td>DA</td><td><input value="9972"></td>
-<td>CPF DEDUCT</td><td><input value="0"></td>
+<td>DA 9972</td><td><input value="9972"></td>
+<td>CPF DEDUCT 0</td><td><input value="0"></td>
 </tr>
 <tr>
-<td>HRA</td><td><input value="6648"></td>
-<td>PT</td><td><input value="200"></td>
+<td>HRA 6648</td><td><input value="6648"></td>
+<td>PT 200</td><td><input value="200"></td>
 </tr>
 <tr>
-<td>MA</td><td><input value="0"></td>
-<td>IT</td><td><input value="0"></td>
+<td>MA 500</td><td><input value="0"></td>
+<td>IT 0</td><td><input value="0"></td>
 </tr>
 <tr>
-<td>CA</td><td><input value="0"></td>
-<td>GSLI</td><td><input value="60"></td>
+<td>CA 0</td><td><input value="0"></td>
+<td>GSLI 60</td><td><input value="60"></td>
 </tr>
 <tr>
-<td>CPF</td><td><input value="0"></td>
-<td>OVERDRAWN</td><td><input value="0"></td>
+<td>CPF 0</td><td><input value="0"></td>
+<td>OVERDRAWN 0</td><td><input value="0"></td>
 </tr>
 <tr>
-<td>IR</td><td><input value="0"></td>
+<td>IR 0</td><td><input value="0"></td>
 <td></td><td></td>
 </tr>
 </table>
