--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -102,10 +102,10 @@ button{
 
 <table>
 <tr>
-<th class="section-title">EARNINGS(Rs)</th>
-<th class="section-title">DEDUCTIONS(Rs)</th>
-<th class="section-title">RECOVERIES OF LOAN(Rs)</th>
-<th class="section-title">OUT/ACCT.DED (Rs)</th>
+<th class="section-title" colspan="2">EARNINGS(Rs)</th>
+<th class="section-title" colspan="2">DEDUCTIONS(Rs)</th>
+<th class="section-title" colspan="2">RECOVERIES OF LOAN(Rs)</th>
+<th class="section-title" colspan="2">OUT/ACCT.DED (Rs)</th>
 </tr>
 
 <tr>
