--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -109,36 +109,53 @@ button{
 </tr>
 
 <tr>
-<td>BASIC 55400</td><td><input value="55400"></td>
-<td>GPF 5500</td><td><input value="5500"></td>
+<td>BASIC</td><td><input value="55400"></td>
+<td>GPF</td><td><input value="5500"></td>
+    <td>GPF</td><td><input value="5500"></td>
+    <td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>ADDL. REMUN. 400</td><td><input value="400"></td>
-<td>PF LOAN 0</td><td><input value="0"></td>
+<td>ADDL. REMUN.</td><td><input value="400"></td>
+<td>PF LOAN</td><td><input value="0"></td>
+    <td>GPF</td><td><input value="5500"></td>
+    <td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>DA 9972</td><td><input value="9972"></td>
-<td>CPF DEDUCT 0</td><td><input value="0"></td>
+<td>DA</td><td><input value="9972"></td>
+<td>CPF DEDUCT</td><td><input value="0"></td>
+    <td>GPF</td><td><input value="5500"></td>
+    <td>GPF</td><td><input value="5500"></td>
+    
 </tr>
 <tr>
-<td>HRA 6648</td><td><input value="6648"></td>
-<td>PT 200</td><td><input value="200"></td>
+<td>HRA</td><td><input value="6648"></td>
+<td>PT</td><td><input value="200"></td>
+<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>MA 500</td><td><input value="0"></td>
-<td>IT 0</td><td><input value="0"></td>
+<td>MA</td><td><input value="0"></td>
+<td>IT</td><td><input value="0"></td>
+<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>CA 0</td><td><input value="0"></td>
-<td>GSLI 60</td><td><input value="60"></td>
+<td>CA</td><td><input value="0"></td>
+<td>GSLI</td><td><input value="60"></td>
+<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>CPF 0</td><td><input value="0"></td>
-<td>OVERDRAWN 0</td><td><input value="0"></td>
+<td>CPF</td><td><input value="0"></td>
+<td>OVERDRAWN</td><td><input value="0"></td>
+<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500"></td>
 </tr>
 <tr>
-<td>IR 0</td><td><input value="0"></td>
+<td>IR</td><td><input value="0"></td>
 <td></td><td></td>
+<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500"></td>
 </tr>
 </table>
 
