--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -45,6 +45,7 @@ input{
     background:#ddd;
     font-weight:bold;
     text-align:center;
+    border-right: none !important;
 }
 .footer{
     margin-top:10px;
