--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -61,6 +61,8 @@ button{
 }
 .no-right-border{
     border-right: none !important;
+    border-left: none !important;
+    border-down: none !important;
 }
     
 @media print{
