--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -26,7 +26,7 @@ table{
     margin-top:10px;
 }
 td,th{
-    border:1px solid #000;
+   /* border:1px solid #000;*/
     padding:6px;
     font-size:14px;
 }
@@ -91,18 +91,16 @@ button{
 <tr>
 <td>SCHOOL NAME:</td>
 <td colspan="3"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
-</tr>
-<tr>
 <td>DESIGNATION:</td>
 <td><input value="HT"></td>
-<td>PAN:</td>
-<td><input value="ABCDE1234F"></td>
 </tr>
 <tr>
 <td>LEVEL:</td>
 <td><input value="LEVEL-9"></td>
 <td>CELL:</td>
 <td><input value="CELL-23"></td>
+<td>PAN:</td>
+<td><input value="ABCDE1234F"></td>
 </tr>
 </table>
 
