--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -31,7 +31,7 @@ td,th{
     font-size:14px;
 }
 .no-border td{
-    border:none;
+/*    border:none;*/
     padding:4px;
 }
 input{
@@ -84,13 +84,13 @@ button{
 <table class="no-border">
 <tr>
 <td>EMPLOYEE NAME:</td>
-<td><input value="ABCD EFGH"></td>
+<td style="width: 200px;"><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID:</td>
 <td><input value="AAAA1111"></td>
 </tr>
 <tr>
 <td>SCHOOL NAME:</td>
-<td colspan="3"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
+<td  style="width: 200px;"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
 <td>DESIGNATION:</td>
 <td><input value="HT"></td>
 </tr>
@@ -98,7 +98,7 @@ button{
 <td>LEVEL:</td>
 <td><input value="LEVEL-9"></td>
 <td>CELL:</td>
-<td><input value="CELL-23"></td>
+<td style="width: 180px;"><input value="CELL-23"></td>
 <td>PAN:</td>
 <td><input value="ABCDE1234F"></td>
 </tr>
