--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -26,7 +26,7 @@ table{
     margin-top:10px;
 }
 td,th{
-   /* border:1px solid #000;*/
+    border:1px solid #000;
     padding:6px;
     font-size:14px;
 }
