--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -85,22 +85,20 @@ button{
 <tr>
 <td>EMPLOYEE NAME:</td>
 <td style="width: 200px;"><input value="ABCD EFGH"></td>
-<td></td><td></td>
 <td>EMPLOYEE ID:</td>
 <td><input value="AAAA1111"></td>
 </tr>
 <tr>
 <td>SCHOOL NAME:</td>
 <td  style="width: 200px;"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
-<td></td><td></td>
 <td>DESIGNATION:</td>
 <td><input value="HT"></td>
 </tr>
 <tr>
 <td>LEVEL:</td>
-<td><input value="LEVEL-9"></td>
-<td>CELL:</td>
-<td style="width: 180px;"><input value="CELL-23"></td>
+<td><input value="LEVEL-9">CELL: <input value="CELL-23"></td>
+<td></td>
+<!--<td style="width: 180px;"></td>-->
 <td>PAN:</td>
 <td><input value="ABCDE1234F"></td>
 </tr>
