--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -33,6 +33,7 @@ td,th{
 .no-border td{
 /*    border:none;*/
     padding:4px;
+    white-space: nowrap;
 }
 input{
     width:100%;
@@ -84,13 +85,13 @@ button{
 <table class="no-border">
 <tr>
 <td>EMPLOYEE NAME:</td>
-<td style="width: 500px;"><input value="ABCD EFGH"></td>
+<td style="width: 370px;"><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID:</td>
 <td><input value="AAAA1111"></td>
 </tr>
 <tr>
 <td>SCHOOL NAME:</td>
-<td  style="width: 200px;"><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
+<td><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
 <td>DESIGNATION:</td>
 <td><input value="HT"></td>
 </tr>
