--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -97,7 +97,7 @@ button{
 </tr>
 <tr>
 <td>LEVEL:</td>
-<td><input value="LEVEL-9">CELL: <input value="CELL-23"></td>
+<td><input value="LEVEL-9   CELL:CELL-23"></td>
 <td>PAN:</td>
 <td><input value="ABCDE1234F"></td>
 </tr>
