--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -84,8 +84,7 @@ button{
 
 <table class="no-border">
 <tr>
-<td>EMPLOYEE NAME:</td>
-<td style="width: 370px;"><input value="ABCD EFGH"></td>
+<td style="width: 370px;">EMPLOYEE NAME:<input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID:</td>
 <td><input value="AAAA1111"></td>
 </tr>
