--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -84,21 +84,16 @@ button{
 
 <table class="no-border">
 <tr>
-<td style="width: 370px;">EMPLOYEE NAME:<input value="ABCD EFGH"></td>
-<td>EMPLOYEE ID:</td>
-<td><input value="AAAA1111"></td>
+<td style="width: 370px;">EMPLOYEE NAME: <input value="ABCD EFGH"></td>
+<td>EMPLOYEE ID: <input value="AAAA1111"></td>
 </tr>
 <tr>
-<td>SCHOOL NAME:</td>
-<td><input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
-<td>DESIGNATION:</td>
-<td><input value="HT"></td>
+<td>SCHOOL NAME: <input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
+<td>DESIGNATION: <input value="HT"></td>
 </tr>
 <tr>
-<td>LEVEL:</td>
-<td><input value="LEVEL-9   CELL:CELL-23"></td>
-<td>PAN:</td>
-<td><input value="ABCDE1234F"></td>
+<td>LEVEL: <input value="LEVEL-9>   CELL: <input value="CELL-23"></td>
+<td>PAN: <input value="ABCDE1234F"></td>
 </tr>
 </table>
 
