--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -84,7 +84,7 @@ button{
 
 <table class="no-border">
 <tr>
-<td style="width: 430px;">EMPLOYEE NAME: <input value="ABCD EFGH"></td>
+<td style="width: 430px;"><b></b>EMPLOYEE NAME: </b><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID: <input value="AAAA1111"></td>
 </tr>
 <tr>
