--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -92,7 +92,7 @@ button{
 <td>DESIGNATION: <input value="HT"></td>
 </tr>
 <tr>
-<td>LEVEL: <input value="LEVEL-9>   CELL: <input value="CELL-23"></td>
+<td>LEVEL: <input value="LEVEL-9   CELL: CELL-23"></td>
 <td>PAN: <input value="ABCDE1234F"></td>
 </tr>
 </table>
