--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -85,7 +85,7 @@ button{
 <table class="no-border">
 <tr>
 <td style="width: 310px;"><b></b>EMPLOYEE NAME: </b><input value="ABCD EFGH"></td>
-<td style="width: 5px;">EMPLOYEE ID: <input value="AAAA1111"></td>
+<td>EMPLOYEE ID: <input value="AAAA1111"></td>
 </tr>
 <tr>
 <td>SCHOOL NAME: <input value="AAAA PRIMARY SCHOOL (UDISE: 11111111111)"></td>
