--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -24,6 +24,7 @@ table{
     width:100%;
     border-collapse:collapse;
     margin-top:10px;
+    white-space: nowrap;
 }
 td,th{
     border:1px solid #000;
@@ -33,7 +34,6 @@ td,th{
 .no-border td{
 /*    border:none;*/
     padding:4px;
-    width:700px;
     white-space: nowrap;
 }
 input{
@@ -85,7 +85,7 @@ button{
 
 <table class="no-border">
 <tr>
-<td style="width: 470px;"><b></b>EMPLOYEE NAME: </b><input value="ABCD EFGH"></td>
+<td style="width: 570px;"><b></b>EMPLOYEE NAME: </b><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID: <input value="AAAA1111"></td>
 </tr>
 <tr>
