--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -14,7 +14,7 @@ body{
     margin:20px auto;
     background:#fff;
     padding:20px;
-    border:2px solid #000;
+  /*  border:2px solid #000;*/
 }
 h2,h3{
     text-align:center;
