--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -32,7 +32,7 @@ td,th{
     font-size:14px;
 }
 .no-border td{
-/*    border:none;*/
+    border:none;
     padding:4px;
     white-space: nowrap;
 }
