--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -107,7 +107,7 @@ button{
 </tr>
 
 <tr class="no-right-border">
-<td>BASIC</td><td style="text-align:right;"><input value="55400"></td>
+<td>BASIC</td><td ><input value="55400" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500"></td>
     <td>GPF</td><td><input value="5500"></td>
     <td>GPF</td><td><input value="5500"></td>
