--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -107,53 +107,53 @@ button{
 </tr>
 
 <tr class="no-right-border">
-<td>BASIC</td><td ><input value="55400" style="text-align:right;"></td>
-<td>GPF</td><td><input value="5500"></td>
-    <td>GPF</td><td><input value="5500"></td>
-    <td>GPF</td><td><input value="5500"></td>
+<td>BASIC</td><td><input value="55400" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr class="no-right-border">
-<td>ADDL. REMUN.</td><td><input value="400"></td>
-<td>PF LOAN</td><td><input value="0"></td>
-    <td>GPF</td><td><input value="5500"></td>
-    <td>GPF</td><td><input value="5500"></td>
+<td>ADDL. REMUN.</td><td><input value="400" style="text-align:right;"></td>
+<td>PF LOAN</td><td><input value="0" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr class="no-right-border">
-<td>DA</td><td><input value="9972"></td>
-<td>CPF DEDUCT</td><td><input value="0"></td>
-    <td>GPF</td><td><input value="5500"></td>
-    <td>GPF</td><td><input value="5500"></td>
+<td>DA</td><td><input value="9972" style="text-align:right;"></td>
+<td>CPF DEDUCT</td><td><input value="0" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+    <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     
 </tr>
 <tr class="no-right-border">
-<td>HRA</td><td><input value="6648"></td>
-<td>PT</td><td><input value="200"></td>
-<td>GPF</td><td><input value="5500"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>HRA</td><td><input value="6648" style="text-align:right;"></td>
+<td>PT</td><td><input value="200" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr class="no-right-border">
-<td>MA</td><td><input value="0"></td>
-<td>IT</td><td><input value="0"></td>
-<td>GPF</td><td><input value="5500"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>MA</td><td><input value="0" style="text-align:right;"></td>
+<td>IT</td><td><input value="0" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr class="no-right-border">
-<td>CA</td><td><input value="0"></td>
-<td>GSLI</td><td><input value="60"></td>
-<td>GPF</td><td><input value="5500"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>CA</td><td><input value="0" style="text-align:right;"></td>
+<td>GSLI</td><td><input value="60" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr>
-<td>CPF</td><td><input value="0"></td>
-<td>OVERDRAWN</td><td><input value="0"></td>
-<td>GPF</td><td><input value="5500"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>CPF</td><td><input value="0" style="text-align:right;"></td>
+<td>OVERDRAWN</td><td><input value="0" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 <tr>
-<td>IR</td><td><input value="0"></td>
+<td>IR</td><td><input value="0" style="text-align:right;"></td>
 <td></td><td></td>
-<td>GPF</td><td><input value="5500"></td>
-<td>GPF</td><td><input value="5500"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
+<td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
 </table>
 
