--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -61,11 +61,11 @@ button{
     font-size:14px;
     cursor:pointer;
 }
-.no-right-border{
+/*.no-right-border{
     border-right: none !important;
     border-left: none !important;
     border-down: none !important;
-}
+}*/
     
 @media print{
     .print-btn{display:none;}
