--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -61,11 +61,11 @@ button{
     font-size:14px;
     cursor:pointer;
 }
-/*.no-right-border{
+.no-right-border{
     border-right: none !important;
     border-left: none !important;
     border-down: none !important;
-}*/
+}
     
 @media print{
     .print-btn{display:none;}
@@ -106,38 +106,38 @@ button{
 <th class="section-title" colspan="2">OUT/ACCT.DED (Rs)</th>
 </tr>
 
-<tr class="no-right-border">
+<tr class="no-border">
 <td>BASIC</td><td><input value="55400" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-right-border">
+<tr class="no-border">
 <td>ADDL. REMUN.</td><td><input value="400" style="text-align:right;"></td>
 <td>PF LOAN</td><td><input value="0" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-right-border">
+<tr class="no-border">
 <td>DA</td><td><input value="9972" style="text-align:right;"></td>
 <td>CPF DEDUCT</td><td><input value="0" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     
 </tr>
-<tr class="no-right-border">
+<tr class="no-border">
 <td>HRA</td><td><input value="6648" style="text-align:right;"></td>
 <td>PT</td><td><input value="200" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-right-border">
+<tr class="no-border">
 <td>MA</td><td><input value="0" style="text-align:right;"></td>
 <td>IT</td><td><input value="0" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-right-border">
+<tr class="no-border">
 <td>CA</td><td><input value="0" style="text-align:right;"></td>
 <td>GSLI</td><td><input value="60" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
