--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -98,7 +98,7 @@ button{
 </tr>
 </table>
 
-<table>
+<table class="no-border">
 <tr>
 <th class="section-title" colspan="2">EARNINGS(Rs)</th>
 <th class="section-title" colspan="2">DEDUCTIONS(Rs)</th>
