--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -25,6 +25,7 @@ table{
     border-collapse:collapse;
     margin-top:10px;
     white-space: nowrap;
+    border:1px solid #000;
 }
 td,th{
     border:1px solid #000;
@@ -106,38 +107,38 @@ button{
 <th class="section-title" colspan="2">OUT/ACCT.DED (Rs)</th>
 </tr>
 
-<tr class="no-border">
+<tr >
 <td>BASIC</td><td><input value="55400" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-border">
+<tr >
 <td>ADDL. REMUN.</td><td><input value="400" style="text-align:right;"></td>
 <td>PF LOAN</td><td><input value="0" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-border">
+<tr >
 <td>DA</td><td><input value="9972" style="text-align:right;"></td>
 <td>CPF DEDUCT</td><td><input value="0" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
     
 </tr>
-<tr class="no-border">
+<tr >
 <td>HRA</td><td><input value="6648" style="text-align:right;"></td>
 <td>PT</td><td><input value="200" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-border">
+<tr >
 <td>MA</td><td><input value="0" style="text-align:right;"></td>
 <td>IT</td><td><input value="0" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
 </tr>
-<tr class="no-border">
+<tr >
 <td>CA</td><td><input value="0" style="text-align:right;"></td>
 <td>GSLI</td><td><input value="60" style="text-align:right;"></td>
 <td>GPF</td><td><input value="5500" style="text-align:right;"></td>
