--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -62,7 +62,7 @@ button{
     font-size:14px;
     cursor:pointer;
 }
-.no-right-border{
+.border{
     border:1px solid #000;
 }
     
@@ -97,7 +97,7 @@ button{
 </tr>
 </table>
 
-<table class="no-border">
+<table class="border">
 <tr>
 <th class="section-title" colspan="2">EARNINGS(Rs)</th>
 <th class="section-title" colspan="2">DEDUCTIONS(Rs)</th>
