--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -72,8 +72,12 @@ button{
     border:none;
 }
 
-table td:nth-child(1),
-table th:nth-child(2){
+table td:nth-child(2),
+table td:nth-child(4),
+table td:nth-child(6),
+table th:nth-child(1),
+table th:nth-child(2),
+table th:nth-child(3){
     border-right:2px solid black;
 }
 @media print{
