--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -45,7 +45,7 @@ input{
     font-size:14px;
 }
 .section-title{
-    background:#ddd;
+ /*   background:#ddd;*/
     font-weight:bold;
     text-align:center;
 }
@@ -78,7 +78,7 @@ table td:nth-child(6),
 table th:nth-child(1),
 table th:nth-child(2),
 table th:nth-child(3){
-    border-right:2px solid black;
+    border-right:1px solid black;
 }
 @media print{
     .print-btn{display:none;}
