--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -28,7 +28,7 @@ table{
     
 }
 td,th{
-/*    border:1px solid #000;*/
+    border:1px solid #000;
     padding:6px;
     font-size:14px;
 }
@@ -45,7 +45,7 @@ input{
     font-size:14px;
 }
 .section-title{
- /*   background:#ddd;*/
+    background:#ddd;
     font-weight:bold;
     text-align:center;
 }
