--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -28,7 +28,7 @@ table{
     
 }
 td,th{
-    border:1px solid #000;
+ /*   border:1px solid #000;*/
     padding:6px;
     font-size:14px;
 }
@@ -45,7 +45,6 @@ input{
     font-size:14px;
 }
 .section-title{
-    background:#ddd;
     font-weight:bold;
     text-align:center;
 }
@@ -78,7 +77,7 @@ table td:nth-child(6),
 table th:nth-child(1),
 table th:nth-child(2),
 table th:nth-child(3){
-    border-right:1px solid black;
+    border-right:2px solid black;
 }
 @media print{
     .print-btn{display:none;}
