--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -28,11 +28,11 @@ table{
     
 }
 td,th{
- /*   border:1px solid #000;*/
+    border:2px solid #000;
     padding:6px;
     font-size:14px;
 }
-.no-border td{
+.no-border td,th{
     border:none;
     padding:4px;
     white-space: nowrap;
