--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -32,7 +32,7 @@ td,th{
     padding:6px;
     font-size:14px;
 }
-.no-border td,th{
+.no-border td{
     border:none;
     padding:4px;
     white-space: nowrap;
@@ -91,7 +91,7 @@ table th:nth-child(3){
 <div class="payslip">
 
 <h2>GOVT. OF ____ _____</h2>
-<h2>  OFFICE OF THE ___ _______ __ _______</h2>
+<h2>  <input text="OFFICE OF THE ___ _______ __ _______"></h2>
 <h2>  AAAA CIRCLE, ______ </h2>
 <h3>PAY SLIP FOR THE MONTH OF AUGUST,2025</h3>
 
