--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -91,7 +91,7 @@ table th:nth-child(3){
 <div class="payslip">
 
 <h2>GOVT. OF ____ _____</h2>
-<td>  <input text="OFFICE OF THE ___ _______ __ _______"></td>
+<td><input value="OFFICE OF THE ___ _______ __ _______"></td>
 <h2>  AAAA CIRCLE, ______ </h2>
 <h3>PAY SLIP FOR THE MONTH OF AUGUST,2025</h3>
 
