--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -90,12 +90,14 @@ table th:nth-child(3){
 
 <div class="payslip">
 
-<h2>GOVT. OF ____ _____</h2>
-<td><input value="OFFICE OF THE ___ _______ __ _______"></td>
-<h2>  AAAA CIRCLE, ______ </h2>
-<h3>PAY SLIP FOR THE MONTH OF AUGUST,2025</h3>
+
 
 <table class="no-border">
+<td><input value="GOVT. OF ____ _____</td>
+<td><input value="OFFICE OF THE ___ _______ __ _______"></td>
+<td><input value="AAAA CIRCLE, ______ </td>
+<td><input value="PAY SLIP FOR THE MONTH OF AUGUST,2025</td>
+    
 <tr>
 <td style="width: 570px;"><b></b>EMPLOYEE NAME: </b><input value="ABCD EFGH"></td>
 <td>EMPLOYEE ID: <input value="AAAA1111"></td>
