--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -90,10 +90,10 @@ table th:nth-child(3){
 
 <div class="payslip">
 
-<td><input value="GOVT. OF ____ _____</td>
-<td><input value="OFFICE OF THE ___ _______ __ _______"></td>
-<td><input value="AAAA CIRCLE, ______ </td>
-<td><input value="PAY SLIP FOR THE MONTH OF AUGUST,2025</td>
+<td><input value="GOVT. OF ____ _____<br>
+OFFICE OF THE ___ _______ __ _______<br>
+AAAA CIRCLE, ______ <br>
+PAY SLIP FOR THE MONTH OF AUGUST,2025"</td>
 
 <table class="no-border">
     
