--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -22,6 +22,7 @@ h2,h3{
 }
 table{
     width:100%;
+    height:77px;
     border-collapse:collapse;
     margin-top:10px;
     white-space: nowrap;
