--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -94,7 +94,7 @@ table th:nth-child(3){
     
 <tr>
 <td colspan="2">
-<textarea style="width:100%; height:100%; border:none; font-family:inherit; font-size:15px; resize:none; text-align: center;">
+<textarea style="width:100%; height: 100px; border:none; font-family:inherit; font-size:15px; text-align: center;">
 GOVT. OF ____ _____
 OFFICE OF THE ___ _______ __ _______
 AAAA CIRCLE, ______
