--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -92,18 +92,11 @@ table th:nth-child(3){
 
 <table class="no-border">
     
-<tr>
-<td colspan="2">
-<textarea style="width:100%; height: 100px; border:none; font-family:inherit; font-size:15px; text-align: center;">
-
-OFFICE OF THE ___ _______ __ _______
-AAAA CIRCLE, ______
-PAY SLIP FOR THE MONTH OF AUGUST, 2025
-</textarea>
-</td>
-</tr>
     <tr >
 <td><input value="GOVT. OF ____ _____" style="text-align: center;"></td>
+<td><input value="OFFICE OF THE ___ _______ __ _______" style="text-align: center;"></td>
+<td><input value="AAAA CIRCLE, ______" style="text-align: center;"></td>
+<td><input value="PAY SLIP FOR THE MONTH OF AUGUST, 2025" style="text-align: center;"></td>
     </tr>    
     
 <tr>
