--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -386,7 +386,8 @@ th{
         "evbasoftware@gmail.com",
         "d.p.denayek@gmail.com",
         "blarakesh@gmail.com", 
-        "dulalchandraroy1970@gmail.com"
+        "dulalchandraroy1970@gmail.com",
+        "kutubuddinshike@gmail.com"
 ];
 
 function handleCredentialResponse(response) {
