--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -384,7 +384,9 @@ th{
         "circlelabpur@gmail.com",
       /*  "ujlmndl@gmail.com",*/
         "evbasoftware@gmail.com",
+        "prasadsaha7@gmail.com",
         "d.p.denayek@gmail.com",
+        "nalwest.ssmbirbhum@gmail.com",
         "blarakesh@gmail.com", 
         "dulalchandraroy1970@gmail.com",
         "kutubuddinshike@gmail.com"
