--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
   <a class="btn" href="#pay">Get Paid Support</a>
 </section>
 
+  <h2>Our Paid Services</h2>
+
+<ul>
+  <li>
+    Salary Statement Help – ₹199
+    <a href="pay.html?service=salary&amt=199">
+      <button>Pay & View</button>
+    </a>
+  </li>
+</ul>
+  
 <section class="services">
   <h2>Our Services</h2>
 
