--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -24,8 +24,9 @@ table{
     width:80%;
     border-collapse:collapse;
     margin-top:10px;
+    margin-left:30px;
     white-space: nowrap;
-    padding-left:20px;
+    
     
 }
 td,th{
