--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -223,7 +223,7 @@ table th:nth-child(3){
     
 </table>
     <br>
-    <p style="font-size:12px;"> 
+    <p style="font-size:12px;" margin-left:30px;> 
    GP: Grade Pay, DA: Dearness Allowance, HRA: House Rent Allowance, MA: Medical Allowance, CA: Conveyance Allowance,
 
    <br><br>
