--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -92,7 +92,7 @@ table th:nth-child(3){
 @media print{
     .print-btn{display:none;}
     body{background:#fff;}
-    .footer{display:none;}
+    footer{display:none;}
 }
 </style>
 </head>
