--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -255,7 +255,7 @@ table th:nth-child(3){
    </div>
    </div>
 
- <footer>
+ <footer margin-left:270px;>
   © 2026 AI Online | All Rights Reserved
 </footer>
     
