--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -21,7 +21,7 @@ h2,h3{
     margin:5px 0;
 }
 table{
-    width:80%;
+    width:85%;
     border-collapse:collapse;
     margin-top:10px;
     margin-left:30px;
@@ -236,14 +236,14 @@ table th:nth-child(3){
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
      <table class="no-border">
-         <tr style="border-bottom:1px solid #000;" >
+         <tr style="border-bottom:1px solid #000; font-size:13px;" >
          <td colspan="15" ><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.
              <br><br><br>
          </tr>
          <tr>
-         <td style="padding-top:0; padding-left:0;"><input value="https://aionline.in.net" style="text-align:left; font-size:11px; font-style:italic; width:167px; font-weight:bold;"></td>
-          <td style="border:none; padding-top:0;" ><input value="Page-1" style="text-align:center; font-size:11px; font-style:italic; width:77px; font-weight:bold; "></td>
-          <td style="text-align:right; padding-right:0; padding-top:0;"><input value="Date of Generation: 16th of January 2026" style="text-align:right; font-size:11px; font-style:italic; width:257px; font-weight:bold;"></td>
+         <td style="padding-top:0; padding-left:0;"><input value="https://aionline.in.net" style="text-align:left; font-size:12px; font-style:italic; width:167px; font-weight:bold;"></td>
+          <td style="border:none; padding-top:0;" ><input value="Page-1" style="text-align:center; font-size:12px; font-style:italic; width:77px; font-weight:bold; "></td>
+          <td style="text-align:right; padding-right:0; padding-top:0;"><input value="Date of Generation: 16th of January 2026" style="text-align:right; font-size:12px; font-style:italic; width:257px; font-weight:bold;"></td>
          </tr >  
          
      </table>
