--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -237,7 +237,7 @@ table th:nth-child(3){
     
      <table class="no-border">
          <tr style="border-bottom:1px solid #000; font-size:15px;" >
-         <td colspan="15" ><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.
+         <td colspan="15" ><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
              <br><br><br>
          </tr>
          <tr>
