--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -236,8 +236,8 @@ table th:nth-child(3){
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
      <table class="no-border">
-         <tr style="border-bottom:1px solid #000; font-size:15px;" >
-         <td colspan="15" ><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
+         <tr style="border-bottom:20px solid #000;" >
+         <td colspan="15" style="font-size:13px;><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
              <br><br><br>
          </tr>
          <tr>
