--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -235,9 +235,9 @@ table th:nth-child(3){
     </p>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
-     <table class="no-border" style="font-size:13px;>
+     <table class="no-border" >
          <tr style="border-bottom:1px solid #000;">
-         <td colspan="15"><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
+         <td colspan="15" style="font-size:13px;"><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
              <br><br><br><br><br><br>
          </tr>
          <tr>
