--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -236,10 +236,11 @@ table th:nth-child(3){
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
      <table class="no-border" >
-         <tr style="border-bottom:1px solid #000; font-size:14px;">
+         <tr style="border-bottom:1px solid #000; ">
          <td colspan="15" ><b>Disclaimer:</b> This is a computer generated Pay Slip and hence does not require any signature.</td>
-             <br><br><br><br><br><br>
+             
          </tr>
+         <br><br><br><br><br><br>
          <tr>
          <td style="padding-top:0; padding-left:0;"><input value="https://aionline.in.net" style="text-align:left; font-size:12px; font-style:italic; width:167px; font-weight:bold;"></td>
           <td style="border:none; padding-top:0;" ><input value="Page-1" style="text-align:center; font-size:12px; font-style:italic; width:77px; font-weight:bold; "></td>
