--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -389,6 +389,7 @@ th{
         "nalwest.ssmbirbhum@gmail.com",
         "blarakesh@gmail.com", 
         "dulalchandraroy1970@gmail.com",
+        "subrata.murmu@gmail.com",
         "kutubuddinshike@gmail.com"
 ];
 
