--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -101,9 +101,9 @@ table th:nth-child(3){
 
 <table class="no-border" >
     
-<tr><td colspan="15" ><input value="GOVT. OF WEST BENGAL" style="text-align: center; font-weight:bold; width:710px; font-size:16px" ></td></tr>
-<tr><td colspan="15" ><input value="OFFICE OF THE SUB INSPECTOR OF SCHOOLS" style="text-align: center; font-weight:bold; width:710px; font-size:16px"></td></tr>
-<tr><td colspan="15" ><input value="LABPUR CIRCLE, BIRBHUM" style="text-align: center; font-weight:bold; font-size:12px; color:#084870; width:710px;"></td></tr>
+<tr><td colspan="15" ><input value="GOVT. OF --" style="text-align: center; font-weight:bold; width:710px; font-size:16px" ></td></tr>
+<tr><td colspan="15" ><input value="OFFICE OF THE ----" style="text-align: center; font-weight:bold; width:710px; font-size:16px"></td></tr>
+<tr><td colspan="15" ><input value="A CIRCLE, D/D" style="text-align: center; font-weight:bold; font-size:12px; color:#084870; width:710px;"></td></tr>
 <tr><td colspan="15" style="padding-bottom:37px;"><input value="PAY SLIP FOR THE MONTH OF AUGUST, 2025" style="text-align: center; font-weight:bold; font-size:12px; width:710px;"></td></tr>
     
 <tr>
