--- a/Pay_Slip.html
+++ b/Pay_Slip.html
@@ -259,9 +259,9 @@ table th:nth-child(3){
 
  <footer style="text-align:center;">
   © 2026 AI Online | All Rights Reserved
-</footer>
-    
-    
+
+    <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=klfljya3564z8zdng1uu3ru6eazldu8y" border="0" title="web counter" alt="web counter"></a>
+ </footer>    
    <script>
 function calculatePay(){
 
