--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 
     <footer>
         <span>© 2026 AI Online | All Rights Reserved</span>
+<br><br>
+        <a href="https://www.freecounterstat.com" title="free web counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=g8hw1rubbf2fkm6uxc5hs24wrbmyh4wx" border="0" title="free web counter" alt="free web counter"></a>
     </footer>
 
 </body>
