--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <li>
                 Salary Data
                 <ul>
-                    <li><a href="https://aionline.in.net/Pay_Slip.html">Pay Slip</a> (FREE)</li>
+                    <li><a href="https://aionline.in.net/Pay_Slip.html">Pay Slip [Primary School Teachers, West Bengal]</a> (FREE)</li>
                     <li>Salary Statement one year (Under consruction)</li>
                     
                 </ul>
