--- a/index.html
+++ b/index.html
@@ -99,9 +99,14 @@
 
 <body>
 
-    <header>
-        <h1>AI Online</h1>
-        <p>Smart Digital & AI Based Services</p>
+    <header class="site-header">
+    <div class="header-inner">
+        <img src="logo.png" alt="AI Online Logo" class="logo">
+        <div class="title">
+            <h1>AI Online</h1>
+            <p>Smart Digital & AI Based Services</p>
+        </div>
+    </div>
     </header>
 
     <div class="container">
